// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputIcon renders with align="left" 1`] = `
<span
  className="ax-input__icon ax-input__icon--align-left"
>
  <svg
    className="ax-icon ax-icon--twitter"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</span>
`;

exports[`TextInputIcon renders with defaultProps 1`] = `
<span
  className="ax-input__icon ax-input__icon--align-right"
>
  <svg
    className="ax-icon ax-icon--twitter"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</span>
`;

exports[`TextInputIcon renders with onClick 1`] = `
<span
  className="ax-input__icon ax-input__icon--align-right"
>
  <a
    className="ax-link ax-link--style-subtle"
    onClick={[Function]}
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </a>
</span>
`;

exports[`TextInputIcon renders with the correct iconColor 1`] = `
<span
  className="ax-input__icon ax-input__icon--align-right"
>
  <svg
    className="ax-icon ax-icon--twitter ax-text--color-facebook"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</span>
`;

exports[`TextInputIcon renders with tooltip when TooltipContext passed 1`] = `
<span
  className="ax-input__icon ax-input__icon--align-right"
>
  <svg
    className="ax-icon ax-icon--twitter"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</span>
`;

exports[`TextInputIcon renders with tooltip when string passed 1`] = `
<span
  className="ax-input__icon ax-input__icon--align-right"
>
  <svg
    className="ax-icon ax-icon--twitter"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</span>
`;
